# ts-function

./: Cargo.toml  README.md  test.sh  test_into_box  test_try_into.rs
src/: lib.rs  ts_macro.rs  ts_type.rs
tests/: args.js  args.rs  basic.js  basic.rs  errors.js  errors.rs  generic_collections.js  generic_collections.rs  return_values.js  return_values.rs  types.js  types.rs
typescript_test/: .gitignore  package.json  test.ts  tsconfig.json
typescript_test/rust_module/: Cargo.toml
typescript_test/rust_module/src/: lib.rs
