[package]
name = "ts-function"
version = "0.1.0"
edition = "2024"
description = "A proc-macro that generates TypeScript type aliases and wasm-bindgen ABI trait impls for Rust callback wrapper structs"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ts-function"
readme = "README.md"
homepage = "https://github.com/logankaser/ts-function"
repository = "https://github.com/logankaser/ts-function"
categories = ["wasm", "web-programming", "development-tools::ffi"]
keywords = ["wasm-bindgen", "typescript", "callback", "macro"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-MIT", "LICENSE-APACHE"]

[lib]
proc-macro = true

[features]
console = []

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
ts-type = { git = "https://github.com/logankaser/wasm-utils-rs" }

[dev-dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen-test = "0.3"
ts-macro = { git = "https://github.com/logankaser/wasm-utils-rs" }

[workspace]
members = ["typescript_test/rust_module"]
