[package]
name = "ts-function"
version = "0.2.0"
edition = "2024"
description = "A proc-macro that generates TypeScript type aliases and wasm-bindgen ABI trait impls for Rust callback wrapper structs"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ts-function"
readme = "README.md"
homepage = "https://github.com/logankaser/ts-function"
repository = "https://github.com/logankaser/ts-function"
categories = ["wasm", "web-programming", "development-tools::ffi"]
keywords = ["wasm-bindgen", "typescript", "callback", "macro"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-MIT", "LICENSE-APACHE", "tests"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
# --- dependencies for internal modules (ts-type, ts-macro) ---
heck = "0.5"
wasm-bindgen = "0.2"
js-sys = "0.3"
# -------------------------------------------------------------

[dev-dependencies]
wasm-bindgen-test = "0.3"

[workspace]
members = ["typescript_test/rust_module"]
