[package]
name = "rust_module"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
ts-function = { path = "../../", features = ["console"] }
ts-macro = { git = "https://github.com/logankaser/wasm-utils-rs" }
